@@ -9,9 +9,9 @@ USERLIB = libstan.a
 SHLIB = rstan.dll
 
 LIBSTANOBJECTS = agrad__agrad.o agrad__matrix.o math__matrix.o
-OBJECTS = stanc.o gm__grammars__whitespace_grammar_inst.o gm__grammars__program_grammar_inst.o gm__grammars__statement_grammar_inst.o  gm__ast_def.o gm__grammars__var_deccls_grammar_inst.o gm__grammars__expression_grammar_inst.o chains.o misc.o 
 
-OBJECTS = stanc.o gm__grammars__whitespace_grammar_inst.o gm__grammars__program_grammar_inst.o gm__grammars__statement_grammar_inst.o  gm__ast_def.o gm__grammars__var_deccls_grammar_inst.o gm__grammars__expression_grammar_inst.o chains.o misc.o 
+OBJECTS = stanc.o chains.o misc.o
+OBJECTS += $(patsubst %.cpp,%.o,$(wildcard gm__*.cpp))
 
 # EIGEN_PATH := $(shell "${R_HOME}/bin${R_ARCH_BIN}/Rscript" -e "cat(system.file('include', package = 'RcppEigen'))")
 EIGEN_PATH = ../inst/include/stanlib/eigen_3.1.2
